# app/model/internal/fa_bsc_transfer.go
@@ -6,9 +6,9 @@ package internal
 
 // FaBscTransfer is the golang structure for table fa_bsc_transfer.
 type FaBscTransfer struct {
-	Id      int     `orm:"id,primary" json:"id"`      //
-	From    string  `orm:"from"       json:"from"`    // 转账地址
-	To      string  `orm:"to"         json:"to"`      // 接收地址
-	Amount  float64 `orm:"amount"     json:"amount"`  // 数量
-	Created int     `orm:"created"    json:"created"` //
+	Id       int     `orm:"id,primary" json:"id"`       //
+	FromAddr string  `orm:"fromAddr"   json:"fromAddr"` // 转账地址
+	ToAddr   string  `orm:"toAddr"     json:"toAddr"`   // 接收地址
+	Amount   float64 `orm:"amount"     json:"amount"`   // 数量
+	Created  int     `orm:"created"    json:"created"`  //
 }
